--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,9 @@ body {
 
 #screen {
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
     
     background-color: #F8F9FA;
     color: #212529;
@@ -46,6 +47,11 @@ body {
     
     width: 80%;
     height: 20%;
+}
+
+#screen-subtext {
+    padding: 0px 12px;
+    font-size: 32px;
 }
 
 #screen-text {
