--- a/styles.css
+++ b/styles.css
@@ -40,13 +40,16 @@ body {
     justify-content: center;
     align-items: flex-end;
     
+    word-wrap: break-word;
+    word-break: break-all;
+    
     background-color: #F8F9FA;
     color: #212529;
     border: 2px solid #212529;
     
     
     width: 80%;
-    height: 20%;
+    min-height: 20%;
 }
 
 #screen-subtext {
